--- a/app/package.json
+++ b/app/package.json
@@ -7,16 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.5.1",
     "express": "~4.13.1",
+    "express-session": "^1.14.1",
     "jade": "~1.11.0",
-    "jquery": "^3.1.0",
+    "mongoose": "^4.5.10",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {
-    "angular": "^1.5.8",
-    "jquery": "^3.1.0"
   }
 }
