--- a/app/package.json
+++ b/app/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^4.5.10",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "webpack": "^1.13.2"
   }
 }
