--- a/app/webpack/package.json
+++ b/app/webpack/package.json
@@ -12,9 +12,11 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
     "node-sass": "^3.12.2",
     "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7"
   },
   "dependencies": {
     "babel-core": "^6.18.2"
